--- a/examples/waspello/src/client/Main.css
+++ b/examples/waspello/src/client/Main.css
@@ -123,8 +123,8 @@ button, input[type=button], input[type=submit] {
 }
 
 button, input, textarea {
-  color: #172b4d;
-  font-size: 14px;
+  color: #172b4d !important;
+  font-size: 14px !important;
   font-weight: 400;
 }
 
